# rez-maya

./: CMakeLists.txt  README.md  install.sh  package.py
config/Adlm/: AdlmThinClientCustomEnv.xml.in
config/maya/: maya.lic.in
